# crud-rust-server

./: .gitattributes  .gitignore  Cargo.toml  DOCUMENTATION.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  nginx.conf  prometheus.yml  rust-toolchain.toml
src/: db.rs  main.rs  types.rs
src/dto/: person_dto.rs
src/models/: person.rs
src/people/controllers/: create_person_controller.rs  get_people_controller.rs  get_person_controller.rs  mod.rs  update_person_controller.rs
src/people/services/: create_person_service.rs  get_people_service.rs  get_person_service.rs  mod.rs  update_person_service.rs
src/repositories/: person_repository.rs
src/routes/: mod.rs  people_routes.rs  routes.rs
